--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -33,11 +33,33 @@ android {
 
 dependencies {
 
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation "androidx.appcompat:appcompat:1.3.1"
+    // For loading and tinting drawables on older versions of the platform
+    implementation "androidx.appcompat:appcompat-resources:1.3.1"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // Material Design
+    implementation 'com.google.android.material:material:1.4.0'
+
+    // Custom toast
+    implementation 'io.github.shashank02051997:FancyToast:2.0.1'
+
+    // ZXing Barcode Scanner
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
+
+    // Image lib
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
+    // Lib for displaying gif
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.22'
 
+    // Lib for recyclerview
+    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
+
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
